package es.progcipfpbatoi;

import es.progcipfpbatoi.menu.Menu;

public class BatBatCar {

    public static void main(String[] args) {
        Menu menu = new Menu();
        menu.iniciar();
    }
}
