package es.progcipfpbatoi.model.entidades;


public class Viaje {

    
}


